* (T379137) Added language support for Mindong (Traditional Han script)
  (cdo-hant).
* (T379137) Added language support for Mindong (Latin script) (cdo-latn).
* …

=== Breaking changes in 1.44 ===

* In StatusValue::replaceMessage(), ::hasMessage() and ::hasMessagesExcept()
  passing MessageSpecifier or MessageValue as $source, deprecated in 1.43,
  is no longer allowed.
* The methods MessageValue::objectParams(), Message::objectParams()
  and Message::objectParam(), deprecated in 1.43, have been removed.
* The UserGroupMembershipParam class, deprecated in 1.43, has been removed.
* The ParamType::OBJECT constant, deprecated in 1.43, has been removed.
* The MediaWiki\Message\Converter class, deprecated in 1.43, has been removed.
  Use MessageValue::newFromSpecifier or Message::newFromSpecifier
  instead (T358779).
* Return type declarations were added to methods in `includes/libs/Message`,
  specifically in the `MessageSpecifier`, `ITextFormatter`, and
  `IMessageFormatterFactory` interfaces. This update enhances type safety but
  may require updates in any classes implementing these interfaces, including
  external extensions. Extensions such as Translate, Flow, and ReadingLists
  require compatibility patches to support these changes.
* IDatabase::LB_TRX_ROUND_ID was removed and IDatabase::LB_READ_ONLY_REASON
  was marked as an internal constant.
* The ParsoidOutputAccess class marked @unstable from creation and
  deprecated with all of its methods in 1.43, has been removed.
* The HtmlToContentTransform::setMetrics() and
  HtmlInputTransformHelper::setMetrics() methods now require a StatsFactory
  argument.  Passing a StatsdDataFactoryInterface was deprecated in 1.43.
* IDatabase::onAtomicSectionCancel() has been removed without deprecation
  as it's completely unused.
* The method ParserOptions::setupFakeRevision has been marked internal. It
  will remain backwards compatible in 1.44 but may change without notice in
  1.45 or later.